Correcting UI Squishing

--- a/src/sass/components/cards.scss
+++ b/src/sass/components/cards.scss
@@ -1,6 +1,7 @@
 /* Cards */
 
 .card-container {
+    display: inline;
     width: 100%;
     height: 100%;
     overflow-y: auto;
@@ -9,9 +10,9 @@
 .artist-card {
     min-width: 300px;
     width: 100%;
-    max-width: 400px;
+    max-width: 450px;
     height: 160px;
-    margin: 5px 20px 20px auto;
+    margin: 5px auto 20px auto;
     border-radius: 15px;
     background: lighten($black, 15%);
 
@@ -30,7 +31,7 @@
         font-size: 12px;
         color: $offWhite;
         background: none;
-        
+
         span {
             padding-left: 10px;
         }
@@ -59,4 +60,9 @@
     &:focus {
         background: $black;
     }
+}
+
+/* Correction class for ANT DESIGN transition */
+.left-marg {
+    margin-left: 200px !important;
 }
