--- a/src/sass/pages/dashboard.scss
+++ b/src/sass/pages/dashboard.scss
@@ -134,7 +134,7 @@ h1.channel-header {
 }
 .static-content-center {
     position: fixed;
-    right: 0;
+    left: 150px;
     height: 100%;
     max-width: calc(100% - 300px);
 }
